[project]
name = "luxtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "depthai>=3.0.0rc4",
    "ipython>=9.4.0",
    "msgpack>=1.1.2",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "protobuf>=6.33.0",
    "pyzmq>=27.1.0",
]
